# os_kernel

./: .asm-lsp.toml  .clang-format  .clangd  .gdb_init  .gdbinit  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  compile_commands.json  config.sh  env.sh  gdb_run.sh  linker.ld  linker_rp2040.ld  linker_rp2350.ld  mnemonic_extract.py  openocd_pico.cfg  pico_toolchain.cmake  transformed_pico.raw
.run/: clean.run.xml  debug.run.xml  kernel.run.xml  run_debug_cmake.run.xml  run_debug_makefile.run.xml
builtins/: .gitignore  Makefile  build_and_pack.sh  crt0.s  libc.c  ls.s  rwpi.ld  shell.c
builtins/libc/: libc.c  libc.h  socket.h  syscall_codes.h  types.h
builtins/src/: cat.c  ls.s  mkdir.c  modbustcp.c  shell.c  touch.c
images/: logo_flash.raw
include/: config.h  ctx.h  divider.h  errno.h  escape_codes.h  font.h  kstdio.h  kstdlib.h  libc.h  memory.h  mutex.h  myctype.h  mystdlib.h  printer.h  proc.h  regs.h  socket.h  stdio.h  syscall_codes.h  tty.h  types.h
include/drivers/: divider.h  ethernet.h  gpio.h  keyboard.h  pio.h  ps2.h  ps2_keyboard.h  sd_card.h  spi.h  time.h  uart.h  vga.h
include/fs/: ext2_fs.h  fat16.h  file.h  hard_drive.h  mbr.h  ramfs.h
include/kernel/: error.h  file.h  isr.h  loader.h  memory.h  mutex.h  network.h  proc.h  resets.h  resources.h  resources_codes.h  signal.h  syscall_codes.h  syscalls.h
include/klibc/: kstdio.h  kstdlib.h  kstring.h
scripts/: build_and_run.sh  gdb_run.sh  image_transform.py  mnemonic_extract.py
src/: archive_loader.S  atomic.s  config.c  ctx.s  divider.s  isr.s  main.c  memory.c  proc.c  resets.s  start.S  start.s  stdio.s
src/drivers/: CMakeLists.txt  ethernet.c  gpio_functions.S  gpio_functions.s  keyboard.S  pio.S  ps2.c  ps2_keyboard.S  ps2_keyboard.c  resets.S  sd_card.c  spi.S  time.S  time.s  uart.S  uart.s  vga.S  vga.c
src/fs/: CMakeLists.txt  fat16.c  file.c  mbr.c  ramfs.c
src/kernel/: CMakeLists.txt  ctx.S  ctx.s  error.c  file.c  isr.S  loader.c  memory.c  network.c  printer.c  proc.c  resources.c  signal.c  syscall_table.c  syscalls.c  syscalls_newlib.c  tty.c
src/kstdlib/: CMakeLists.txt  kstdio.c  kstring.c  libc.c
src/libc/: CMakeLists.txt  printer.c  stdio.S  stdio.c  stdio.s
tests/: test_eth.c
